Fixed Double deprecation warning in unit test for Canberra Distance.